# sample-brain

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  HOW_WE_PROCEED.md  LICENSE  README.md  SB.AGENT.LIST.json  SB.AGENT.RULESET.md  SB.BOOTLOADER.md  SB.VERFUEGBARE.SKILLS.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TITLE_RULES.md  make_label_seeds.ps1  make_title_suggestions.ps1  make_validation_report.ps1  pipeline_config.yaml  pyproject.toml  requirements-clap.txt  requirements-vec.txt  requirements.txt  run_pipeline.py
.codex/: config.toml
.cursor/: INSTALL_SAMPLE_BRAIN_AGENTS.md  SAMPLE_BRAIN_AGENTS_MANIFEST.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md
assets/: README.md
config/: profiles.example.yaml
data/: bpm_normalization.json  catalog.db  filename_tag_regex.json  key_normalization.json  label_seeds.csv  last_paths.json
docs/: AGENTS.md  BOOTLOADER_AND_CONTEXT_STRATEGY.md  BRANCH_PROTECTION.md  CI_DEGRADED_MODE.md  DATA_AND_ARTIFACT_POLICY.md  DAW_INTEGRATION_SPEC.md  EDM_ANALYSIS.md  EPIC_1_CONFIG_PROFILES.md  EPIC_2_SEMANTIC_SEARCH_SPEC.md  ISSUE_BACKLOG.md  MCP_SETUP.md  PIPELINE.md  PIPELINE_NOTE.md  PRODUCT_REQUIREMENTS.md  SAMPLE_BRAIN_SKILLS_SPEC.md  SKILL_INTEGRATION_PLAN.md  SQLITE_VEC_ROADMAP.md  SYSTEM_REQUIREMENTS.md  TARGET_ARCHITECTURE.md  codex_config.example.toml  cursor_mcp.example.json
knowledge/: ACTIVE_ROADMAP.md  CURRENT_STATUS.md  KNOWLEDGE_HUB.md  SYSTEM.CONTEXT.md  SYSTEM_INVARIANTS.md
profiles/: README.md  film_scoring.yaml  hiphop.yaml  house.yaml  techno.yaml  vocals.yaml
(+130 files in other folders)
